Revert aspect ratio fixes for now
This reverts commit 78631edee5fa996199ef1e4cadabdcf4f4e332bc. (+1 squashed commit)
Squashed commits:
[da3c3fe] Revert "Fix the style of the top page projects."

This reverts commit 73b5c4be90bec2c8ed9b22ca85f0a9df9e046547.

--- a/style/style.css
+++ b/style/style.css
@@ -286,7 +286,7 @@ ul.sticky, .projects, .sponsorship {
   padding-top: 2em;
 }
 
-.projects,
+.projects, 
 .sponsorship {
   clear: both;
 }
@@ -436,12 +436,9 @@ li.member,
   overflow: hidden;
 }
 
-li.member > a {
-  display: contents;
-}
-
 .project-logo,
 .member-logo {
+  height: 200px;
   width: 200px;
   display: block;
   margin: 0 auto 1em;
@@ -483,20 +480,14 @@ li.member > a {
     margin-left: 15%;
     margin-right: 15%;
   }
-  .project-logo {
-    float: left;
-  }
-  .project-logo,
+  .project-logo, 
   .member-logo {
     margin: 0 1em 0 0;
+    float: left;
   }
-  .project-description {
+  .project-description,
+  .member-description {
     margin-left: calc(200px + 1em);
-  }
-  .member {
-    display: flex;
-    align-items: center;
-    margin-left: 0;
   }
 }
 
@@ -806,5 +797,4 @@ address .blog:hover {
 
 h1,h2 {
   font-weight: bold;
-}
 }
